tests/baselines/reference/arrayAssignmentTest1.errors.txt
==== tests/cases/compiler/arrayAssignmentTest1.ts (19 errors) ====
    interface I1 {
        IM1():void[];
    }
    
    class C1 implements I1 { 
        IM1():void[] {return null;}
        C1M1():C1[] {return null;}
     }
    class C2 extends C1 {
        C2M1():C2[] { return null;}
    }
    
    class C3 {
        CM3M1() { return 3;}
    }
    
    
    /*
    
    This behaves unexpectedly with the following types:
    
    Type 1 of any[]:
    
    * Type 2 of the following throws an error but shouldn't: () => void[], SomeClass[], and {one: 1}[].
    
    * Type 2 of the following doesn't throw an error but should: {one: 1}, new() => SomeClass, SomeClass.
    
    */
    var a1 : any = null;
    var c1 : C1 = new C1();
    var i1 : I1 = c1;
    var c2 : C2 = new C2();
    var c3 : C3 = new C3();
    var o1 = {one : 1};
    var f1 = function () { return new C1();}
    
    var arr_any: any[] = [];
    var arr_i1: I1[] = [];
    var arr_c1: C1[] = [];
    var arr_c2: C2[] = [];
    var arr_i1_2: I1[] = [];
    var arr_c1_2: C1[] = [];
    var arr_c2_2: C2[] = [];
    var arr_c3: C3[] = [];
    
    var i1_error: I1 = []; // should be an error - is
        ~~~~~~~~~~~~~~~~~
!!! arrayAssignmentTest1.ts(46,5): error TS2012: Cannot convert 'any[]' to 'I1':
!!! 	Type 'any[]' is missing property 'IM1' from type 'I1'.
    var c1_error: C1 = []; // should be an error - is
        ~~~~~~~~~~~~~~~~~
!!! arrayAssignmentTest1.ts(47,5): error TS2012: Cannot convert 'any[]' to 'C1':
!!! 	Type 'any[]' is missing property 'IM1' from type 'C1'.
    var c2_error: C2 = []; // should be an error - is
        ~~~~~~~~~~~~~~~~~
!!! arrayAssignmentTest1.ts(48,5): error TS2012: Cannot convert 'any[]' to 'C2':
!!! 	Type 'any[]' is missing property 'C2M1' from type 'C2'.
    var c3_error: C3 = []; // should be an error - is
        ~~~~~~~~~~~~~~~~~
!!! arrayAssignmentTest1.ts(49,5): error TS2012: Cannot convert 'any[]' to 'C3':
!!! 	Type 'any[]' is missing property 'CM3M1' from type 'C3'.
    
    
    arr_any = arr_i1; // should be ok - is
    arr_any = arr_c1; // should be ok - is
    arr_any = arr_c2; // should be ok - is
    arr_any = arr_c3; // should be ok - is
    
    arr_i1 = arr_i1; // should be ok - subtype relationship - is
    arr_i1 = arr_c1; // should be ok - subtype relationship - is
    arr_i1 = arr_c2; // should be ok - subtype relationship - is
    arr_i1 = arr_c3; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest1.ts(60,1): error TS2012: Cannot convert 'C3[]' to 'I1[]':
!!! 	Types of property 'pop' of types 'C3[]' and 'I1[]' are incompatible:
!!! 		Call signatures of types '() => C3' and '() => I1' are incompatible:
!!! 			Type 'C3' is missing property 'IM1' from type 'I1'.
    
    arr_c1 = arr_c1; // should be ok - subtype relationship - is
    arr_c1 = arr_c2; // should be ok - subtype relationship - is
    arr_c1 = arr_i1; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest1.ts(64,1): error TS2012: Cannot convert 'I1[]' to 'C1[]':
!!! 	Types of property 'pop' of types 'I1[]' and 'C1[]' are incompatible:
!!! 		Call signatures of types '() => I1' and '() => C1' are incompatible:
!!! 			Type 'I1' is missing property 'C1M1' from type 'C1'.
    arr_c1 = arr_c3; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest1.ts(65,1): error TS2012: Cannot convert 'C3[]' to 'C1[]':
!!! 	Types of property 'pop' of types 'C3[]' and 'C1[]' are incompatible:
!!! 		Call signatures of types '() => C3' and '() => C1' are incompatible:
!!! 			Type 'C3' is missing property 'IM1' from type 'C1'.
    
    arr_c2 = arr_c2; // should be ok - subtype relationship - is
    arr_c2 = arr_c1; // should be an error - subtype relationship - is
    ~~~~~~
!!! arrayAssignmentTest1.ts(68,1): error TS2012: Cannot convert 'C1[]' to 'C2[]':
!!! 	Types of property 'pop' of types 'C1[]' and 'C2[]' are incompatible:
!!! 		Call signatures of types '() => C1' and '() => C2' are incompatible:
!!! 			Type 'C1' is missing property 'C2M1' from type 'C2'.
    arr_c2 = arr_i1; // should be an error - subtype relationship - is
    ~~~~~~
!!! arrayAssignmentTest1.ts(69,1): error TS2012: Cannot convert 'I1[]' to 'C2[]':
!!! 	Types of property 'pop' of types 'I1[]' and 'C2[]' are incompatible:
!!! 		Call signatures of types '() => I1' and '() => C2' are incompatible:
!!! 			Type 'I1' is missing property 'C2M1' from type 'C2'.
    arr_c2 = arr_c3; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest1.ts(70,1): error TS2012: Cannot convert 'C3[]' to 'C2[]':
!!! 	Types of property 'pop' of types 'C3[]' and 'C2[]' are incompatible:
!!! 		Call signatures of types '() => C3' and '() => C2' are incompatible:
!!! 			Type 'C3' is missing property 'C2M1' from type 'C2'.
    
    // "clean up bug" occurs at this point
    // if you move these three expressions to another file, they raise an error
    // something to do with state from the above propagating forward?
    arr_c3 = arr_c2_2; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest1.ts(75,1): error TS2012: Cannot convert 'C2[]' to 'C3[]':
!!! 	Types of property 'pop' of types 'C2[]' and 'C3[]' are incompatible:
!!! 		Call signatures of types '() => C2' and '() => C3' are incompatible:
!!! 			Type 'C2' is missing property 'CM3M1' from type 'C3'.
    arr_c3 = arr_c1_2; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest1.ts(76,1): error TS2012: Cannot convert 'C1[]' to 'C3[]':
!!! 	Types of property 'pop' of types 'C1[]' and 'C3[]' are incompatible:
!!! 		Call signatures of types '() => C1' and '() => C3' are incompatible:
!!! 			Type 'C1' is missing property 'CM3M1' from type 'C3'.
    arr_c3 = arr_i1_2; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest1.ts(77,1): error TS2012: Cannot convert 'I1[]' to 'C3[]':
!!! 	Types of property 'pop' of types 'I1[]' and 'C3[]' are incompatible:
!!! 		Call signatures of types '() => I1' and '() => C3' are incompatible:
!!! 			Type 'I1' is missing property 'CM3M1' from type 'C3'.
    
    arr_any = f1; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest1.ts(79,1): error TS2012: Cannot convert '() => C1' to 'any[]':
!!! 	Type '() => C1' is missing property 'concat' from type 'any[]'.
    arr_any = o1; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest1.ts(80,1): error TS2012: Cannot convert '{ one: number; }' to 'any[]':
!!! 	Type '{ one: number; }' is missing property 'concat' from type 'any[]'.
    arr_any = a1; // should be ok - is
    arr_any = c1; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest1.ts(82,1): error TS2012: Cannot convert 'C1' to 'any[]':
!!! 	Type 'C1' is missing property 'concat' from type 'any[]'.
    arr_any = c2; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest1.ts(83,1): error TS2012: Cannot convert 'C2' to 'any[]':
!!! 	Type 'C2' is missing property 'concat' from type 'any[]'.
    arr_any = c3; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest1.ts(84,1): error TS2012: Cannot convert 'C3' to 'any[]':
!!! 	Type 'C3' is missing property 'concat' from type 'any[]'.
    arr_any = i1; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest1.ts(85,1): error TS2012: Cannot convert 'I1' to 'any[]':
!!! 	Type 'I1' is missing property 'concat' from type 'any[]'.